--- a/.gitignore
+++ b/.gitignore
@@ -468,3 +468,4 @@ FodyWeavers.xsd
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 venv/
+.env
