--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.4
 asttokens==2.4.1
 av==12.1.0
+backports.tarfile==1.2.0
 Brotli==1.1.0
 certifi==2024.6.2
 chardet==5.2.0
@@ -10,6 +11,7 @@ comm==0.2.2
 ctranslate2==4.3.1
 debugpy==1.8.1
 decorator==5.1.1
+docutils==0.21.2
 exceptiongroup==1.2.1
 executing==2.0.1
 faster-whisper==1.0.2
@@ -24,19 +26,28 @@ idna==3.7
 importlib_metadata==7.1.0
 ipykernel==6.29.4
 ipython==8.18.1
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
 jedi==0.19.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+keyring==25.2.1
+markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+more-itertools==10.3.0
 mpmath==1.3.0
 mutagen==1.47.0
 nest-asyncio==1.6.0
+nh3==0.2.17
 numpy==1.26.4
 onnxruntime==1.18.0
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
 pexpect==4.9.0
+pkginfo==1.11.1
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 protobuf==5.27.1
@@ -51,7 +62,11 @@ python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
+readme_renderer==43.0
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
 six==1.16.0
 stack-data==0.6.3
 sympy==1.12.1
@@ -59,6 +74,7 @@ tokenizers==0.19.1
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
+twine==5.1.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.1
