feat: modify: update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ huggingface-hub==0.23.4
 humanfriendly==10.0
 idna==3.7
 importlib_metadata==7.1.0
+ipdb==0.13.13
 ipykernel==6.29.4
 ipython==8.18.1
 jaraco.classes==3.4.0
@@ -71,6 +72,7 @@ six==1.16.0
 stack-data==0.6.3
 sympy==1.12.1
 tokenizers==0.19.1
+tomli==2.0.1
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
